delete date because it is not defined

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1290,6 +1290,24 @@ nav {
   }
 }
 
+
+/*------------------------------------*\
+    SPONSORSHIP PACKAGES
+\*------------------------------------*/
+
+.sponsorship-packages {
+  width: 100%;
+  margin: 150px 0;
+
+
+  tr td:first-child {
+    width: 30%;
+  }
+
+
+}
+
+
 /*------------------------------------*\
     FOOTER
 \*------------------------------------*/
