--- a/app/templates/speaker.ejs
+++ b/app/templates/speaker.ejs
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RS Conf 2018 | Talk</title>
+  <title>RS Conf 2019 | Talk <%= talk_title %></title>
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="../apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/a431cf1d2d.css" media="all" rel="stylesheet">
@@ -32,15 +32,12 @@
   <![endif]-->
 
   <nav>
-
     <input class="menu-btn" type="checkbox"/>
 
     <div class="menu-icon">
-
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
       <span>hamburger menu line</span>
-
     </div>
 
     <div class="menu-wrapper">
@@ -49,14 +46,14 @@
 
         <div class="menu-item-primary">
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../schedule.html">Schedule</a></li>
-            <li><a href="../speakers.html">Speakers</a></li>
-            <li><a href="https://www.eventbrite.com/e/the-rolling-scopes-conference-2018-minsk-tickets-42312482775">Tickets</a></li>
-            <li><a href="../venue.html">Venue</a></li>
-            <li><a href="../partners.html">Partners</a></li>
-            <li><a href="../contacts.html">Contacts</a></li>
-            <li><a href="../code-of-conduct.html">Code of Conduct</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a target="_blank" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="partners.html">Partners</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="code-of-conduct.html">Code of Conduct</a></li>
           </ul>
         </div>
 
@@ -68,9 +65,9 @@
         <!--</div>-->
 
         <div class="menu-item-about">
-          <h2><a href="../about.html">About</a></h2>
+          <h2><a href="about.html">About</a></h2>
           <p>The Rolling Scopes is a front-end conference, located in Minsk, Belarus.</p>
-          <p><a href="../about.html">Read more</a></p>
+          <p><a href="about.html">Read more</a></p>
         </div>
 
         <div class="menu-item-previous">
@@ -82,25 +79,27 @@
             </li>
             <li><a href="https://2017.conf.rollingscopes.com/">2017 </a>
             </li>
+            <li><a href="https://2018.conf.rollingscopes.com/">2018 </a>
+            </li>
           </ul>
         </div>
 
         <div class="menu-item-venue">
-          <h2><a href="../venue.html">Venue</a></h2>
-          <img src="../images/venue-menu.jpg"
-               alt="">
-          <h3>Palac kuĺtury prafsajuzaŭ</h3>
-          <p>praspiekt Niezaliežnasci 25, Minsk</p>
-          <p><a href="../venue.html">Learn more</a></p>
+          <h2><a href="venue.html">Venue</a></h2>
+          <img src="images/ok16-logo.png" alt="ok16 logo">
+          <h3>ОК16 CULTURAL HUB</h3>
+          <p>vulica Kastryčnickaja 16, Minsk</p>
+          <p><a href="venue.html">Learn more</a></p>
         </div>
 
         <div class="menu-item-tickets">
-          <h2><a href="https://www.eventbrite.com/e/the-rolling-scopes-conference-2018-minsk-tickets-42312482775">Tickets</a></h2>
+          <h2><a href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Tickets</a></h2>
           <p class="bold">The Rolling Scopes Conference
-            February 10-11, 2018
+            August 9-11, 2019
             <br><span class="city-address">Minsk, Belarus</span></p>
 
-          <p><a class="btn" href="https://www.eventbrite.com/e/the-rolling-scopes-conference-2018-minsk-tickets-42312482775"> Free Ticket</a></p>
+          <p><a target="_blank" class="btn" href="https://imaguru.by/product/the-rolling-scopes-conference-2019/"> Buy a Ticket</a></p>
+          <!--<p class="placeholder-btn"> Not on sale yet</p>-->
 
           <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
             <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
@@ -111,16 +110,17 @@
           <h2>Follow us</h2>
           <p>Follow us on social media, our hashtag #rollingscopes</p>
           <ul class="social-links">
-            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fa fa-slack"></i></a></li>
+            <li><a target="_blank" href="http://frontendbelarus.herokuapp.com/"><i class="fab fa-slack-hash"></i></a></li>
             <li><a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/"><i
-              class="fa fa-facebook"></i></a></li>
-            <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fa fa-youtube-play"
-                                                                                           aria-hidden="true"></i></a>
+                  class="fab fa-facebook-f"></i></a></li>
+            <li><a target="_blank" href="https://www.youtube.com/user/therollingscopes"><i class="fab fa-youtube"
+                ></i></a>
             </li>
-            <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fa fa-vk"></i></a></li>
-            <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://vk.com/therollingscopes"><i class="fab fa-vk"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/rollingscopes"><i class="fab fa-twitter"></i></a></li>
             <li><a target="_blank" href="https://www.instagram.com/explore/tags/rollingscopes/"><i
-              class="fa fa-instagram"></i></a></li>
+                  class="fab fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://t.me/therollingscopes/"><i class="fab fa-telegram-plane"></i></a></li>
           </ul>
         </div>
       </div>
@@ -131,9 +131,9 @@
     <div class="content-sm">
 
       <div class="talk-info">
-        <p class="text-lg">Talk: TBD</p>
-        <!--<p class="text-md"><span class="talk-date">FEB 10</span>, <span class="talk-time">10:20</span> <span-->
-          <!--class="talk-place first-stream">Pink Room</span><span class="talk-lang">EN</span></p>-->
+        <p class="text-lg"><%= talk_title %></p>
+        <!--<p class="text-md"><span class="talk-date">FEB 11</span>, <span class="talk-time">10:00</span> <span-->
+        <!--class="talk-place first-stream">Pink Room</span><span class="talk-lang">EN</span></p>-->
         <!--<p>TBD</p>-->
       </div>
     </div>
@@ -143,20 +143,19 @@
     <div class="content-sm">
       <h2>Speaker</h2>
       <div class="speaker-profile">
-        <img src="../images/speakers/andrei-lesnitsky.jpg" alt="Andrei Lesnitsky photo">
-        <div class="speaker-about"><p class="text-lg">Andrei Lesnitsky </p>
-          <p class="text-md margin-bottom-md">Minsk, Belarus</p>
-          <p class="margin-bottom-md">Andrei Lesnitsky - self-employed software dev. Passioned about
-            front-end development, bleeding edge web-technologies, js performance, public speaking and knowledge
-            sharing. Constantly experimenting with new stuff, messing around with pet projects for fun</p>
-          <p>Twitter: <a class="bold" target="_blank" href="https://twitter.com/lesnitsky_a">@lesnitsky_a</a></p>
+        <img src="../images/speakers/<%= photo %>" alt="<%= name %> photo">
+        <div class="speaker-about"><p class="text-lg"><%= name %></p>
+          <p class="text-md margin-bottom-md"><%= city %></p>
+          <p class="margin-bottom-md"><%= intro %></p>
 
+          <% if (twitter.length > 0) { %>
+          <p>Twitter: <a class="bold" target="_blank" href="https://twitter.com/<%= twitter %>">@<%= twitter %></a></p>
+          <% } %>
         </div>
       </div>
 
     </div>
   </section>
-
 
 
 </div>
