--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -423,7 +423,6 @@ nav + section.shorted {
   }
 }
 
-
 .social-links {
   text-align: center;
   padding: 80px 0 40px;
@@ -451,6 +450,17 @@ blockquote {
 .badge-spec {
   width: 100%;
   max-width: 500px;
+}
+
+figure {
+  @media (max-width: $screen-tablet) {
+    margin: 1em 20px;
+
+
+    figcaption h3 {
+      font-size: 1.5rem;
+    }
+  }
 }
 
 /*------------------------------------*\
@@ -870,6 +880,13 @@ nav {
   justify-content: space-around;
   align-items: stretch;
   align-content: flex-start;
+
+  img {
+    max-width: 260px;
+    width: 100%;
+    display: inline-block;
+  }
+
   li {
     display: list-item;
     width: 25%;
@@ -881,15 +898,8 @@ nav {
       margin-bottom: 30px;
       img {
         max-width: 130px;
-        height: 172px;
       }
     }
-  }
-
-  img {
-    max-width: 260px;
-    height: 230px;
-    display: inline-block;
   }
 
   &.shorted {
@@ -1088,8 +1098,11 @@ nav {
 \*------------------------------------*/
 
 .img-venue {
+  width: 100%;
   max-width: 560px;
   margin-bottom: 20px;
+
+
 }
 
 /*------------------------------------*\
@@ -1277,7 +1290,6 @@ nav {
   }
 }
 
-
 .previous-conf-list {
   list-style-type: none;
   padding: 0;
@@ -1290,7 +1302,6 @@ nav {
   }
 }
 
-
 /*------------------------------------*\
     SPONSORSHIP PACKAGES
 \*------------------------------------*/
@@ -1299,14 +1310,11 @@ nav {
   width: 100%;
   margin: 150px 0;
 
-
   tr td:first-child {
     width: 30%;
   }
 
-
 }
-
 
 /*------------------------------------*\
     FOOTER
@@ -1336,9 +1344,6 @@ footer {
   }
 }
 
-
-
-
 /*------------------------------------*\
     MEDIA PRINT a4
 \*------------------------------------*/
@@ -1348,7 +1353,7 @@ footer {
   .for-print {
     display: block;
   }
-  span.for-print  {
+  span.for-print {
     display: inline;
   }
 
@@ -1385,19 +1390,18 @@ footer {
     width: 100%;
     padding: 5px 0 5px 50px;
 
-
     &.first-stream,
     &.second-stream {
-        width: 50%;
-        padding-right: 5px;
+      width: 50%;
+      padding-right: 5px;
     }
 
     &.second-stream {
-        padding-right: 0;
-        padding-left: 5px;
-        .schedule-time {
-          display: none;
-        }
+      padding-right: 0;
+      padding-left: 5px;
+      .schedule-time {
+        display: none;
+      }
     }
 
     h3 {
@@ -1424,8 +1428,6 @@ footer {
   }
 
 }
-
-
 
 /*------------------------------------*\
     MEDIA PRINT a2
