add one more conf speaker, add speaker company to speakers page

--- a/app/templates/speaker.ejs
+++ b/app/templates/speaker.ejs
@@ -140,10 +140,10 @@
     <div class="content-sm">
 
       <div class="talk-info">
-        <p class="text-lg">Talk: <%= talk_title %></p>
+        <p class="text-lg"><%= talk_title %></p>
         <!--<p class="text-md"><span class="talk-date">FEB 11</span>, <span class="talk-time">10:00</span> <span-->
         <!--class="talk-place first-stream">Pink Room</span><span class="talk-lang">EN</span></p>-->
-        <!--<p>TBD</p>-->
+        <p><%- talk_description %></p>
       </div>
     </div>
   </section>
