--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -902,6 +902,24 @@ nav {
     }
   }
 
+  figcaption {
+    position: relative;
+  }
+
+  .speaker-company {
+    background: $color-yellow;
+    color: $color-black;
+
+    position: absolute;
+    top: -28px;
+    right: 0;
+    z-index: 10;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    padding: 0 3px;
+  }
+
+
   &.shorted {
     margin: 0;
     padding: 40px 0;
