add speaker: Alex Saft

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -577,6 +577,7 @@ nav {
 /*------------------------------------*\
     MENU CONTENT
 \*------------------------------------*/
+
 .menu-wrapper {
   overflow: auto;
   position: fixed;
@@ -992,7 +993,7 @@ nav {
   .talk-time,
   .talk-place,
   .talk-lang {
-    padding: 0 5px;
+    //padding: 0 5px;
   }
 
   .first-stream {
