--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1450,8 +1450,14 @@ footer {
     }
   }
 
+  p {
+    font-size: 8pt;
+    line-height: 10pt;
+    margin: .2rem 0;
+  }
+
   h2.text-lg {
-    page-break-before: always;
+    //page-break-before: always;
     font-size: 14pt;
     line-height: 14pt;
     margin: 0 0 5px;
