--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1348,6 +1348,27 @@ nav {
 
 }
 
+
+.short-conf-description {
+  float: right;
+  width: 30%;
+  text-align: right;
+
+  @media (max-width: $screen-tablet) {
+    width: 100%;
+    text-align: left;
+  }
+
+  & + img {
+    width: 30%;
+    margin-bottom: 30px;
+
+    @media (max-width: $screen-tablet) {
+      width: 100%;
+      margin-top: 30px;
+    }
+  }
+}
 /*------------------------------------*\
     FOOTER
 \*------------------------------------*/
