--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -165,11 +165,13 @@ body {
 
   &.page-speakers {
     background: $color-pink;
+
     .btn {
       &:hover {
         color: $color-pink;
       }
     }
+
     & + footer {
       color: $color-pink;
     }
@@ -177,9 +179,11 @@ body {
 
   &.page-venue, &.page-partners {
     background: $color-green;
+
     & + footer {
       color: $color-green;
     }
+
     .btn {
       &:hover {
         color: $color-green;
@@ -189,9 +193,11 @@ body {
 
   &.page-schedule {
     background: $color-lime;
+
     & + footer {
       color: $color-lime;
     }
+
     .btn {
       &:hover, &.active {
         color: $color-lime;
@@ -201,6 +207,7 @@ body {
 
   &.page-contacts {
     background: $color-purple;
+
     & + footer {
       color: $color-purple;
     }
@@ -208,9 +215,11 @@ body {
 
   &.page-talk {
     background: $color-yellow;
+
     & + footer {
       color: $color-yellow;
     }
+
     .btn {
       &:hover {
         color: $color-yellow;
@@ -220,14 +229,17 @@ body {
 
   &.page-about, &.page-code-of-conduct {
     background: $color-blue;
+
     & + footer, footer {
       color: $color-blue;
     }
+
     .btn {
       margin: 30px 0;
       @media (max-width: 767px) {
         margin: 15px 0;
       }
+
       &:hover {
         color: $color-blue;
       }
@@ -308,6 +320,7 @@ a {
   color: $color-link;
   text-decoration: none;
   border-bottom: 1px solid $color-link;
+
   &:hover {
     border-bottom: none;
   }
@@ -363,12 +376,14 @@ section {
   &.shorted {
     padding: 40px 20px;
     text-align: left;
+
     &:last-child {
       padding-bottom: 120px;
       @media (max-width: $screen-tablet) {
         padding-bottom: 50px;
       }
     }
+
     @media (max-width: $screen-tablet) {
       padding: 20px;
     }
@@ -377,15 +392,19 @@ section {
   .content-xsm {
     max-width: $content-xsm;
   }
+
   .content-sm {
     max-width: $content-sm;
   }
+
   .content-md {
     max-width: $content-md;
   }
+
   .content-lg {
     max-width: $content-lg;
   }
+
   .content-xsm,
   .content-sm,
   .content-md,
@@ -427,9 +446,11 @@ nav + section.shorted {
   text-align: center;
   padding: 80px 0 40px;
   margin: 0 auto;
+
   li {
     display: inline-block;
   }
+
   a {
     border-bottom: none;
     font-size: 3rem;
@@ -479,10 +500,12 @@ nav {
   a {
     color: $color-white;
     border-bottom: 1px solid $color-white;
+
     &:hover {
       border-bottom: none;
     }
   }
+
   h2 a {
     border-bottom: none;
   }
@@ -669,14 +692,17 @@ nav {
 
 .menu-item-primary {
   grid-area: primary;
+
   li {
     padding: 8px 0;
     text-transform: uppercase;
     font-weight: bold;
+
     &:first-child {
       padding-top: 0;
     }
   }
+
   a {
     border-bottom: none;
   }
@@ -765,6 +791,7 @@ nav {
 
   .placeholder-btn {
     cursor: default;
+
     &:hover {
       background: transparent;
       color: $color-white !important;
@@ -774,6 +801,7 @@ nav {
 
 .menu-item-social {
   grid-area: social;
+
   .social-links {
     text-align: left;
   }
@@ -814,6 +842,7 @@ nav {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+
     > li {
       padding: 5px;
     }
@@ -846,6 +875,7 @@ nav {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+
     > li {
       padding: 5px;
     }
@@ -862,6 +892,7 @@ nav {
     margin: 30px 20px 0;
     padding: 15px 30px;
     min-width: 210px;
+
     &:hover {
       color: $color-blue;
     }
@@ -918,6 +949,10 @@ nav {
     font-size: 1.2rem;
     line-height: 1.6rem;
     padding: 0 3px;
+
+    @media (max-width: $screen-tablet) {
+      left: 0;
+    }
   }
 
 
@@ -926,6 +961,7 @@ nav {
     padding: 40px 0;
     border: solid $color-black;
     border-width: 1px 0;
+
     li {
       width: 33%;
       padding: 0 15px;
@@ -946,15 +982,18 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+
   img {
     width: 50%;
     margin-right: 15px;
   }
+
   .speaker-about {
     display: inline-block;
     width: 50%;
     text-align: left;
     margin-left: 15px;
+
     p.text-lg {
       margin: 0 0 20px;
     }
@@ -999,6 +1038,7 @@ nav {
   .first-stream {
     background: $color-pink;
   }
+
   .second-stream {
     background: $color-blue;
   }
@@ -1085,6 +1125,7 @@ nav {
         background: $color-pink;
       }
     }
+
     &.second-stream {
       .talk-place {
         background: $color-blue;
@@ -1140,6 +1181,7 @@ nav {
   float: left;
   width: 100%;
   clear: both;
+
   .bold {
     margin-right: 5px;
   }
@@ -1182,32 +1224,39 @@ nav {
       grid-column: 1 / 2;
       grid-row: 1 / 2;
     }
+
     &:nth-child(2) {
       grid-column: 2;
       grid-row: 1 / 3;
     }
+
     &:nth-child(3) {
       grid-column: 3;
       grid-row: 1 / 3;
     }
+
     &:nth-child(4) {
       grid-column: 4;
       grid-row: 1 / 2;
     }
+
     &:nth-child(5) {
       grid-column: 1;
       grid-row: 2 / 4;
     }
+
     &:nth-child(6) {
       grid-column: 2;
       grid-row: 3 / 4;
     }
+
     &:nth-child(7) {
       grid-column: 3;
       grid-row: 3 / 4;
     }
 
   }
+
   a {
     display: inline-block;
     overflow: hidden;
@@ -1247,6 +1296,7 @@ nav {
   justify-content: center;
   align-items: center;
   align-content: flex-start;
+
   li {
     display: list-item;
     width: 20%;
@@ -1260,6 +1310,7 @@ nav {
       margin: 0 0 40px;
     }
   }
+
   a {
     border-bottom: 0;
     display: inline-block;
@@ -1276,20 +1327,25 @@ nav {
     &.partner-diamond:before {
       content: url("../images/partners/diamond.svg");
     }
+
     &.partner-gold:before {
       content: url("../images/partners/gold.svg");
     }
+
     &.partner-silver:before {
       content: url("../images/partners/silver.svg");
     }
+
     &.partner-bronze:before {
       content: url("../images/partners/bronze.svg");
     }
+
     &.partner-silver.shift-left:before,
     &.partner-bronze.shift-left:before {
       right: -20px;
     }
   }
+
   img {
     max-width: 140px;
     width: 100%;
@@ -1313,8 +1369,10 @@ nav {
   list-style-type: none;
   padding: 0;
   margin: 0;
+
   li {
     padding: 10px 0;
+
     &:first-child {
       padding-top: 0;
     }
@@ -1345,7 +1403,6 @@ nav {
     text-align: right;
 
   }
-
 }
 
 
@@ -1369,6 +1426,7 @@ nav {
     }
   }
 }
+
 /*------------------------------------*\
     FOOTER
 \*------------------------------------*/
@@ -1417,8 +1475,8 @@ footer {
   }
 
   body
-  //.page-wrap
-    {
+    //.page-wrap
+  {
     padding: 0;
     background: #fff;
     font-size: 12pt;
@@ -1454,6 +1512,7 @@ footer {
     &.second-stream {
       padding-right: 0;
       padding-left: 5px;
+
       .schedule-time {
         display: none;
       }
@@ -1464,6 +1523,7 @@ footer {
       font-size: 8pt;
       line-height: 10pt;
     }
+
     p {
       font-size: 8pt;
       line-height: 10pt;
@@ -1496,7 +1556,6 @@ footer {
     page-break-before: always;
   }
 }
-
 
 
 /*------------------------------------*\
