add travel sponsorship info

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1447,7 +1447,7 @@ footer {
   height: $height-footer;
   text-align: center;
   background: $color-black;
-  color: $color-purple;
+  color: $color-white;
 
   p {
     font-size: 1.4rem;
