upd: stage color for mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1152,6 +1152,10 @@ nav {
   }
 }
 
+.mobile-people-friday .talk-info .first-stream {
+  background: $color-blue;
+}
+
 /*------------------------------------*\
     SCHEDULE
 \*------------------------------------*/
