fix: borders for mobile second streams

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1367,6 +1367,7 @@ nav {
   }
 
   &.mobile-people-day .second-stream {
+    border-bottom: 1px solid $color-black;
     @media (min-width: $screen-tablet) {
       width: 45%;
     }
