fix: social icons in nav, fix denisov's photo size

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -505,11 +505,11 @@ nav {
 
   .social-links a {
     color: $color-white;
-    margin: 10px 3px;
+    margin: 10px 0;
 
     i {
-      font-size: 2.9rem;
-      line-height: 2.9rem;
+      font-size: 2.8rem;
+      line-height: 2.8rem;
     }
 
     &:hover {
