--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -658,6 +658,11 @@ nav {
     text-transform: uppercase;
     font-size: 2.4rem;
     line-height: 3.2rem;
+
+    a:hover {
+      color: $color-white;
+      background: $color-black;
+    }
   }
 
   h3 {
@@ -719,6 +724,12 @@ nav {
 
   a {
     border-bottom: none;
+
+    &:hover {
+      color: $color-white;
+      background: $color-black;
+    }
+
   }
 }
 
@@ -1311,6 +1322,16 @@ nav {
   &.active {
     background: $color-black;
     color: $color-white;
+
+    &:hover {
+      background: $color-black;
+      color: $color-white;
+    }
+  }
+
+  &:hover {
+    background: transparent;
+    color: $color-black;
   }
 
   .abbr-view {
